--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
                 <ul id="config_nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Usuario" asp-action="Index">Configuração de Usuários</a></li>
                     <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Permissao" asp-action="Index">Configuração de Permisão</a></li>
-
+                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Status" asp-action="Index">Configuração de Status</a></li>
                 </ul>
             </li>
             <!-- Fim - Configurações -->
