--- a/OffshoreTrack/Views/Manutencao/New.cshtml
+++ b/OffshoreTrack/Views/Manutencao/New.cshtml
@@ -12,7 +12,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <form method="post" action="Create">
+<form method="post" action="Create" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-sm-9">
                             <label for="inputText" class="col-sm col-form-label">Manutenção:</label>
@@ -75,14 +75,9 @@
                     </div>
 
                     <label for="anexo" class="form-label">Anexar arquivo:</label>
-                    <input class="form-control" type="file" id="anexo">
+                    <input class="form-control" type="file" id="anexoFile" name="anexoFile">
                     <br>
-
-
-
-                    
-                    <br />
-
+    
                     <button type="submit" class="btn btn-primary" name="submit" value="submit">Cadastrar</button>
                 </form>
             </div>
