--- a/OffshoreTrack/Views/Manutencao/Edit.cshtml
+++ b/OffshoreTrack/Views/Manutencao/Edit.cshtml
@@ -5,14 +5,23 @@
 }
 
 <div class="pagetitle">
-    <h1 class="display-4"> Editar: Manutenção</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <h1 class="display-4">Editar: Manutenção</h1>
+        </div>
+        <div class="col-md-6">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <a class="btn btn-primary" role="button" asp-area="" asp-controller="Manutencao" asp-action="Index">Voltar</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <form method="post" action="Update">
+                <form method="post" asp-action="Update" enctype="multipart/form-data">
                     <input type="hidden" asp-for="id_manutencao" />
                     <div class="row">
                         <div class="col-sm-9">
@@ -75,22 +84,23 @@
                             <span asp-validation-for="id_criticidade" class="text-danger"></span>
                         </div>
                     </div>
+                    <br>
 
                     <label for="anexo" class="form-label">Anexar arquivo:</label>
-                    <input class="form-control" type="file" id="anexo">
-
+                    <input type="file" id="anexoFile" name="anexoFile" class="form-control">
+                    
+                    <input type="hidden" asp-for="anexo" />
+                    <br>
                     @if(Model.anexo != null && Model.anexo.Length > 0)
-                    {
-                        
-                        <a href="@Model.anexo" download>Baixar anexo atual</a>
+                    {    
+                        <a class="btn btn-outline-secondary" href="@Url.Action("DownloadAnexo", "Manutencao", new { id = Model.id_manutencao })">Baixar Anexo atual</a>
+                        <br>
                     }
                     else
                     {
                         <p>Sem Anexo</p>
                     }
-
-                    <br />
-
+                    <br>
                     <button type="submit" class="btn btn-primary" name="submit" value="submit">Salvar</button>
                 </form>
             </div>
