--- a/OffshoreTrack/Views/Material/Read.cshtml
+++ b/OffshoreTrack/Views/Material/Read.cshtml
@@ -92,22 +92,25 @@
                         <br />
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col">
-                        <button type="button" class="btn btn-secondary" id="generateQrCodeButton">Gerar QrCode do Material:</button>
-                        <button type="button" class="btn btn-outline-secondary" id="printQrCodeButton">Imprimir QrCode</button>
-                        <div id="qrcode"></div>
-                        @if (!String.IsNullOrEmpty(Model.qrcode))
-                        {
-                            <img src="data:image/png;base64,@Model.qrcode" alt="QR Code" id="qrCodeImage" style="width: 150px; height: 150px;"/>
-                        }
-                    </div>
+                            <button type="button" class="btn btn-outline-secondary" id="printQrCodeButton" onclick="printQrCode()">Imprimir QrCode</button>
+                        <br>
+                        <div class="row">
+                        <img id="qrCodeImage" src="data:image/png;base64,@Model.qrcode" alt="QrCode" style="width:300px;">
+                        </div>
+                    </div>                
                     <div class="col">
                         <label asp-for="anexo" class="col-form-label">Anexos:</label>
-                        <a class="btn btn-outline-secondary" role="button" asp-action="DownloadAttachment" asp-route-id="@Model.id_material">
-                            Baixar Anexos
-                        </a>
+                        @if(Model.anexo != null && Model.anexo.Length > 0)
+                        {
+                            <a class="btn btn-secondary" href="@Url.Action("DownloadAnexo", "Material", new { id = Model.id_material })">Baixar Anexo</a>
+                            <br>
+                        }
+                        else
+                        {
+                            <p>Sem Anexo</p>
+                        }
                     </div>
                 </div>
                 <hr>
@@ -119,15 +122,25 @@
                         <div class="activity">
                             @if (Model.manutencaos != null)
                             {
-                                @foreach (var manutencao in Model.manutencaos.OrderByDescending(m => m.data).Take(5))
-                                {
-                                    <div class="d-flex">
-                                        <div class="activite-label">@manutencao.data?.ToString("dd/MM/yyyy")</div>
-                                        <i class='bi bi-circle-fill activity-badge text-secondary align-self-start'></i>
-                                        <div class="activity-content">@manutencao.manutencao</div>
-                                        <p>@(manutencao.status != null ? manutencao.status.status : "Sem status")</p>
-                                    </div>
-                                }
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                        <th scope="col">Data</th>
+                                        <th scope="col">Data da Conclusão</th>
+                                        <th scope="col">Manutenção</th>
+                                        </tr>
+                                    </thead> 
+                                    <tbody>
+                                    @foreach (var manutencao in Model.manutencaos.OrderByDescending(m => m.data).Take(5))
+                                    {
+                                        <tr>
+                                        <td>@manutencao.data?.ToString("dd/MM/yyyy")</td>
+                                        <td>@manutencao.data_conclusao?.ToString("dd/MM/yyyy")</td>
+                                        <td>@manutencao.manutencao</td>
+                                        </tr>
+                                    }
+                                    </tbody>
+                                </table>
                             }
                             else
                             {
@@ -138,6 +151,34 @@
                     <br />
                 </div>
                 <!-- Fim - Atividades de Manutencao -->
+
+                <!-- Logs de Atividades -->
+                <div class="form-group">
+                    <label class="col-form-label">Atividades Recentes:</label>
+                    <div class="card">
+                        <div class="activity">
+                            @if (Model.atividadeLogs != null)
+                            {
+                                @foreach (var atividade in Model.atividadeLogs.OrderByDescending(a => a.Timestamp).Take(5))
+                                {
+                                    <div class="d-flex">
+                                        <div class="activite-label">@atividade.Timestamp.ToString("dd/MM/yyyy HH:mm")</div>&nbsp;&nbsp;
+                                        <i class='bi bi-circle-fill activity-badge text-secondary align-self-start'></i>&nbsp;&nbsp;
+                                        <div class="activity-content">@atividade.Acao</div>&nbsp;&nbsp;
+                                        <div class="activity-status">@atividade.usuario?.usuario</div>&nbsp;&nbsp;
+                                    </div>
+                                }
+                            }
+                            else
+                            {
+                                <p>Nenhuma atividade logada.</p>
+                            }
+                        </div>
+                    </div>
+                    <br />
+                </div>
+                <!-- Fim - Logs de Atividades -->
+
                 <br />                
             </div>
         </div>
@@ -146,53 +187,19 @@
 
 @section Scripts {
     <script>
-document.getElementById('generateQrCodeButton').addEventListener('click', function () {
-    var materialId = '@Model.id_material';
-    var qrcodeDiv = document.getElementById('qrcode');
-
-    // Limpar o QR Code existente
-    qrcodeDiv.innerHTML = '';
-
-    // Chame uma ação no controller para gerar o QR Code
-    fetch(`/Material/GenerateQrCode?id=${materialId}`)
-        .then(response => {
-            if(!response.ok) {
-                throw new Error("Erro ao gerar o QR Code");
-            }
-            return response.text();
-        })
-        .then(qrCodeData => {
-            // Defina o conteúdo da div para o QR Code gerado
-            var img = document.createElement('img');
-            img.src = 'data:image/png;base64,' + qrCodeData;
-            img.style.width = '150px';
-            img.style.height = '150px';
-            img.id = 'qrCodeImage';
-            qrcodeDiv.appendChild(img);
-        })
-        .catch(error => {
-            console.log('Erro:', error);
-            qrcodeDiv.innerHTML = 'Erro ao gerar o QR Code';
-        });
-});
-
-//Imprimir QrCode
-document.getElementById('printQrCodeButton').addEventListener('click', function () {
-    var qrCodeImage = document.getElementById('qrCodeImage');
-
-    if (!qrCodeImage) {
-        alert('Por favor, gere o QR Code primeiro.');
-        return;
-    }
-
-    var printWindow = window.open('', '_blank');
-    printWindow.document.write('<html><head><title>Imprimindo QR Code</title></head><body>');
-    printWindow.document.write('<img src="' + qrCodeImage.src + '" style="width: 100%; height: auto;">');
-    printWindow.document.write('</body></html>');
-    printWindow.document.close();
-    printWindow.print();
-});
-// Fim - Imprimir QrCode
+        function printQrCode() {
+            var mywindow = window.open('', 'PRINT', 'height=400,width=600');
+            mywindow.document.write('<html><head><title>' + document.title  + '</title>');
+            mywindow.document.write('</head><body >');
+            mywindow.document.write('<h1>' + document.title  + '</h1>');
+            mywindow.document.write(document.getElementById('qrCodeImage').outerHTML);
+            mywindow.document.write('</body></html>');
+            mywindow.document.close();
+            mywindow.focus();
+            mywindow.print();
+            mywindow.close();
+            return true;
+        }
 
     </script>
 }
