--- a/OffshoreTrack/Views/Cliente/Read.cshtml
+++ b/OffshoreTrack/Views/Cliente/Read.cshtml
@@ -25,8 +25,20 @@
                 <input type="text" class="form-control" id="cliente" name="cliente" asp-for="cliente" readonly />
                 <br />
 
+                <label for="inputText" class="col-sm col-form-label">Razão Social:</label>
+                <input type="text" class="form-control" id="razaoSocial" name="razaoSocial" asp-for="razaoSocial" readonly />
+                <br />
+
                 <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
                 <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" readonly />
+                <br />
+
+                <label for="inputText" class="col-sm col-form-label">Endereço:</label>
+                <input type="text" class="form-control" id="endereco" name="endereco" asp-for="endereco" readonly />
+                <br />
+
+                <label for="inputText" class="col-sm col-form-label">Telefone:</label>
+                <input type="text" class="form-control" id="telefone" name="telefone" asp-for="telefone" readonly />
                 <br />
 
                 <br />
