--- a/OffshoreTrack/Views/Fornecedor/Read.cshtml
+++ b/OffshoreTrack/Views/Fornecedor/Read.cshtml
@@ -23,6 +23,10 @@
                 <label for="inputText" class="col-sm col-form-label">Fornecedor:</label>
                 <input type="text" class="form-control" id="fornecedor" name="fornecedor" asp-for="fornecedor" readonly />
                 <br />
+                
+                <label for="inputText" class="col-sm col-form-label">Razão Social:</label>
+                <input type="text" class="form-control" id="razaoSocial" name="razaoSocial" asp-for="razaoSocial" readonly />
+                <br />
 
                 <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
                 <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" readonly />
