--- a/OffshoreTrack/Views/ParteSolta/Index.cshtml
+++ b/OffshoreTrack/Views/ParteSolta/Index.cshtml
@@ -28,6 +28,7 @@
                         <tr>
                             <th scope="col">Parte Solta</th>
                             <th scope="col">Material</th>
+                            <th scope="col">Fornecedor</th>
                             <th scope="col">Quantidade</th>
                             <th></th>
                         </tr>
@@ -38,6 +39,7 @@
                             <tr>
                                 <td>@item.partesolta</td>
                                 <td>@item.material?.material</td>
+                                <td>@item.fornecedor?.fornecedor</td>
                                 <td>@item.quantidade</td>
 
                                 <td>
