--- a/OffshoreTrack/Views/Rateio/Read.cshtml
+++ b/OffshoreTrack/Views/Rateio/Read.cshtml
@@ -34,8 +34,8 @@
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="valor1" class="col-sm col-form-label">Porcentagem 1:</label>
-                            <input type="text" class="form-control" id="valor1" name="valor1" asp-for="valor1" readonly/>
+                            <label asp-for="porcentagem1" class="col-sm col-form-label">Porcentagem 1:</label>
+                            <input type="text" class="form-control" id="porcentagem1" name="porcentagem1" asp-for="porcentagem1" readonly/>
                         </div>
                     </div>
                 </div>
@@ -49,8 +49,8 @@
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label asp-for="valor2" class="col-sm col-form-label">Porcentagem 2:</label>
-                            <input type="text" class="form-control" id="valor2" name="valor2" asp-for="valor2" readonly/>
+                            <label asp-for="porcentagem2" class="col-sm col-form-label">Porcentagem 2:</label>
+                            <input type="text" class="form-control" id="porcentagem2" name="porcentagem2" asp-for="porcentagem2" readonly/>
                         </div>
                     </div>
                 </div>
