--- a/OffshoreTrack/Views/Cliente/Edit.cshtml
+++ b/OffshoreTrack/Views/Cliente/Edit.cshtml
@@ -29,9 +29,22 @@ ViewData["Title"]="Edit";
                     <input type="text" class="form-control" id="cliente" asp-for="cliente" />
                     <br/>
 
+                    <label for="inputText" class="col-sm col-form-label">Razão Social:</label>
+                    <input type="text" class="form-control" id="razaoSocial" asp-for="razaoSocial" />
+                    <br/>
+
                     <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
                     <input type="text" class="form-control" id="cnpj" asp-for="cnpj" />
                     <br/>
+
+                    <label for="inputText" class="col-sm col-form-label">Endereço:</label>
+                    <input type="text" class="form-control" id="endereco" asp-for="endereco" />
+                    <br/>
+
+                    <label for="inputText" class="col-sm col-form-label">Telefone:</label>
+                    <input type="text" class="form-control" id="telefone" asp-for="telefone" />
+                    <br/>
+
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <button type="submit" class="btn btn-success" name="submit" value="submit">Atualizar</button>
                 </form>
@@ -44,3 +57,14 @@ ViewData["Title"]="Edit";
     </div>
 </div>
 
+@section Scripts
+{
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#cnpj').mask('00.000.000/0000-00');
+        });
+    </script>
+}
