--- a/OffshoreTrack/Views/Cliente/New.cshtml
+++ b/OffshoreTrack/Views/Cliente/New.cshtml
@@ -18,8 +18,20 @@
                     <input type="text" class="form-control" id="cliente" name="cliente" asp-for="cliente" />
                     <br />
 
+                    <label for="inputText" class="col-sm col-form-label">Razão Social:</label>
+                    <input type="text" class="form-control" id="razaoSocial" name="razaoSocial" asp-for="razaoSocial" />
+                    <br />
+
                     <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
                     <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" />
+                    <br />
+
+                    <label for="inputText" class="col-sm col-form-label">Endereço:</label>
+                    <input type="text" class="form-control" id="endereco" name="endereco" asp-for="endereco" />
+                    <br />
+
+                    <label for="inputText" class="col-sm col-form-label">Telefone:</label>
+                    <input type="text" class="form-control" id="telefone" name="telefone" asp-for="telefone" />
                     <br />
 
                     <button type="submit" class="btn btn-primary" name="submit" value="submit">Cadastrar</button>
@@ -31,7 +43,12 @@
 
 @section Scripts
 {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
 
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#cnpj').mask('00.000.000/0000-00');
+        });
+    </script>
 }
