--- a/OffshoreTrack/Views/Fornecedor/New.cshtml
+++ b/OffshoreTrack/Views/Fornecedor/New.cshtml
@@ -17,6 +17,10 @@
                     <input type="text" class="form-control" id="fornecedor" name="fornecedor" asp-for="fornecedor" />
                     <br />
 
+                    <label for="inputText" class="col-sm col-form-label">Razão Social:</label>
+                    <input type="text" class="form-control" id="razaoSocial" name="razaoSocial" asp-for="razaoSocial" />
+                    <br />
+
                     <label for="inputText" class="col-sm col-form-label">CNPJ:</label>
                     <input type="text" class="form-control" id="cnpj" name="cnpj" asp-for="cnpj" />
                     <br />
@@ -46,7 +50,12 @@
 
 @section Scripts
 {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
 
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('#cnpj').mask('00.000.000/0000-00');
+        });
+    </script>
 }
