--- a/OffshoreTrack/Views/Material/Edit.cshtml
+++ b/OffshoreTrack/Views/Material/Edit.cshtml
@@ -25,9 +25,19 @@
                 <form method="post" asp-action="Update" enctype="multipart/form-data">
                     <input type="hidden" asp-for="id_material" />
 
-                    <label for="inputText" class="col-sm col-form-label">Material:</label>
-                    <input type="text" class="form-control" id="material" name="material" asp-for="material" />
-                    <br />
+                    <div class="row">
+                        <div class="col-sm-10">
+                            <label for="inputText" class="col-sm col-form-label">Material:</label>
+                            <input type="text" class="form-control" id="material" name="material" asp-for="material" />
+                            <br />
+                        </div>
+                        <div class="col-sm-2">
+                            <label for="inputText" class="col-sm col-form-label">Status:</label>
+                            <div class="form-group">
+                                <select asp-for="id_status" class="form-control" asp-items="@ViewBag.status"></select>
+                            </div>
+                        </div>
+                    </div>
 
                     <label for="inputText" class="col-sm col-form-label">Descrição:</label>
                     <textarea type="text" rows="3" class="form-control" id="descricao" name="descricao" asp-for="descricao" ></textarea>
@@ -37,10 +47,30 @@
                     <input type="text" class="form-control" id="numeroSerie" name="numeroSerie" asp-for="numeroSerie" />
                     <br />
 
-                    <label for="inputText" class="col-sm col-form-label">Tamanho:</label>
-                    <input type="text" class="form-control" id="tamanho" name="tamanho" asp-for="tamanho" />
-                    <br />
-
+                    <div class="row">
+                        <div class="col">
+                            <label for="inputText" class="col-sm col-form-label">Dimensões:</label>
+                            <input type="text" class="form-control" id="dimensoes" name="dimensoes" asp-for="dimensoes" />
+                            <br />
+                        </div>
+                        <div class="col">
+                            <label for="inputText" class="col-sm col-form-label">Peso:</label>
+                            <input type="text" class="form-control" id="peso" name="peso" asp-for="peso" />
+                            <br />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <label for="inputText" class="col-sm col-form-label">Data de Fabricação:</label>
+                            <input type="date" class="form-control" id="dataFabricacao" name="dataFabricacao" asp-for="dataFabricacao" />
+                            <br />
+                        </div>
+                        <div class="col">
+                            <label for="inputText" class="col-sm col-form-label">Data de Validade:</label>
+                            <input type="date" class="form-control" id="dataValidade" name="dataValidade" asp-for="dataValidade" />
+                            <br />
+                        </div>
+                    </div>
                     
                     <!-- Selects -->
                     <div class="row">
@@ -111,8 +141,19 @@
                             <br />
                         </div>
                     </div>
+                    
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="id_certificacao" class="col-form-label">Certificação:</label>
+                                <select asp-for="id_certificacao" class="form-control" asp-items="@ViewBag.certificacao"></select>
+                                <span asp-validation-for="id_certificacao" class="text-danger"></span>
+                            </div>
+                            <br />
+                        </div>
+                    </div>
 
-                    <label for="anexo" class="form-label">Anexos:</label>
+                    <label for="anexo" class="form-label">Anexo:</label>
                     <input type="file" id="anexoFile" name="anexoFile" class="form-control">
                     <input type="hidden" asp-for="anexo" />
                     <br>
