--- a/OffshoreTrack/Views/ParteSolta/New.cshtml
+++ b/OffshoreTrack/Views/ParteSolta/New.cshtml
@@ -12,33 +12,73 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <form method="post" action="Create">
+                <form method="post" action="Create" enctype="multipart/form-data">
 
-                    <label for="inputText" class="col-sm col-form-label">Parte Solta:</label>
-                    <input type="text" class="form-control" id="partesolta" name="partesolta" asp-for="partesolta" />
-                    <br />
-
-                    <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                    <input type="number" class="form-control" id="quantidade" name="quantidade" asp-for="partesolta" />
-                    <br />
-
-                    <div class="form-group">
-                        <label asp-for="id_oc" class="col-sm col-form-label">Ordem de Compra:</label>
-                        <select asp-for="id_oc" class="form-control" asp-items="@ViewBag.oc"></select>
-                        <span asp-validation-for="id_oc" class="text-danger"></span>
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <label for="inputText" class="col-sm col-form-label">Parte Solta:</label>
+                            <input type="text" class="form-control" id="partesolta" name="partesolta" asp-for="partesolta" />
+                            <br />
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="form-group">
+                                <label asp-for="id_material" class="col-sm col-form-label">Status:</label>
+                                <select asp-for="id_material" class="form-control" asp-items="@ViewBag.status"></select>
+                                <span asp-validation-for="id_material" class="text-danger"></span>
+                            </div>
+                        </div>
                     </div>
-                    <br />
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="id_material" class="col-sm col-form-label">Material:</label>
+                                <select asp-for="id_material" class="form-control" asp-items="@ViewBag.materiais"></select>
+                                <span asp-validation-for="id_material" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="id_material" class="col-sm col-form-label">Fornecedor:</label>
+                                <select asp-for="id_material" class="form-control" asp-items="@ViewBag.fornecedors"></select>
+                                <span asp-validation-for="id_material" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label asp-for="id_material" class="col-sm col-form-label">Local:</label>
+                                <select asp-for="id_material" class="form-control" asp-items="@ViewBag.locais"></select>
+                                <span asp-validation-for="id_material" class="text-danger"></span>
+                            </div>
+                        </div>
 
-                    <div class="form-group">
-                        <label asp-for="id_material" class="col-sm col-form-label">Material:</label>
-                        <select asp-for="id_material" class="form-control" asp-items="@ViewBag.material"></select>
-                        <span asp-validation-for="id_material" class="text-danger"></span>
                     </div>
-                    <br />
+                    <br>
+
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                            <input type="number" class="form-control" id="quantidade" name="quantidade" asp-for="partesolta" />
+                        </div>
+                        <div class="col-sm-5">
+                            <div class="form-group">
+                                <label asp-for="id_oc" class="col-sm col-form-label">Ordem de Compra:</label>
+                                <select asp-for="id_oc" class="form-control" asp-items="@ViewBag.oc"></select>
+                                <span asp-validation-for="id_oc" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-sm-5">
+                            <div class="form-group">
+                                <label asp-for="id_certificacao" class="col-sm col-form-label">Certificado:</label>
+                                <select asp-for="id_certificacao" class="form-control" asp-items="@ViewBag.certificacaos"></select>
+                                <span asp-validation-for="id_certificacao" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                    </div>
 
                     <div class="form-group">
                         <label asp-for="anexo" class="col-sm col-form-label">Anexo:</label>
-                        <input class="form-control" type="file" id="anexo">
+                        <input class="form-control" type="file" id="anexoFile" name="anexoFile">
                     </div>
                     <br />
 
