--- a/OffshoreTrack/Views/ParteSolta/Read.cshtml
+++ b/OffshoreTrack/Views/ParteSolta/Read.cshtml
@@ -21,34 +21,106 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                    <label class="col-sm col-form-label">Parte Solta:</label>
-                    <p class="form-control-static">@Model.partesolta</p>
-                    <br/>
 
-                   <label class="col-sm col-form-label">Quantidade:</label>
-                    <p class="form-control-static">@Model.quantidade</p>
-                    <br/>
+                <div class="row">
+                    <div class="col-sm-9">
+                        <label for="inputText" class="col-sm col-form-label">Parte Solta:</label>
+                        <input type="text" class="form-control" id="partesolta" name="partesolta" asp-for="partesolta" readonly/>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label asp-for="id_material" class="col-sm col-form-label">Status:</label>
+                        <p class="form-control" readonly>@Html.DisplayFor(model => model.status.status)</p>
+                        </div>
+                    </div>
+                </div>
+                <br>
 
-                    <label class="col-sm col-form-label">Ordem de Compra:</label>
-                    <p class="form-control-static">@Model.id_oc</p>
-                    <br />
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="id_material" class="col-sm col-form-label">Material:</label>
+                            <select asp-for="id_material" asp-items="ViewBag.materiais" class="form-control"></select>
 
-                    <label class="col-sm col-form-label">Material:</label>
-                    <p class="form-control-static">@Model.id_material</p>
-                    <br />
-                    
-                    <label class="col-sm col-form-label">Anexo:</label>
-                    @if (Model.anexo != null)
+                            <p class="form-control" readonly>@Html.DisplayFor(model => model.material.material)</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="id_material" class="col-sm col-form-label">Fornecedor:</label>
+                            <p class="form-control" readonly>@Html.DisplayFor(model => model.fornecedor.fornecedor)</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="id_material" class="col-sm col-form-label">Local:</label>
+                            <p class="form-control" readonly>@Html.DisplayFor(model => model.local.local)</p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div class="col-sm-2">
+                        <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                        <input type="number" class="form-control" id="quantidade" name="quantidade" asp-for="quantidade" readonly />
+
+                        <input type="number" class="form-control" id="quantidade" name="quantidade" asp-for="partesolta" readonly />
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="form-group">
+                            <label asp-for="id_oc" class="col-sm col-form-label">Ordem de Compra:</label>
+                            <p class="form-control" readonly>@Html.DisplayFor(model => model.oc.oc)</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="form-group">
+                            <label asp-for="id_certificacao" class="col-sm col-form-label">Certificado:</label>
+                            <p class="form-control" readonly>@Html.DisplayFor(model => model.certificacao.certificacao)</p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="col">
+                    <label asp-for="anexo" class="col-form-label">Anexos:</label>
+                    @if(Model.anexo != null && Model.anexo.Length > 0)
                     {
-                        <a href="@Url.Action("Download", "ParteSolta", new { id = Model.id_partesolta })">Baixar anexo existente</a>
+                        <a class="btn btn-secondary" href="@Url.Action("DownloadAnexo", "Material", new { id = Model.id_material })">Baixar Anexo</a>
+                        <br>
                     }
                     else
                     {
-                        <p class="form-control-static">Nenhum anexo.</p>
+                        <p>Sem Anexo</p>
                     }
-                    <br>
-            </div>
-        </div>
-    </div>
-</div>
+                </div>
 
+                <hr>
+
+                <!-- Logs de Atividades -->
+                <div class="form-group">
+                    <label class="col-form-label">Atividades Recentes:</label>
+                    <div class="card">
+                        <div class="activity">
+                            @if (Model.atividadeLogsPS != null)
+                            {
+                                @foreach (var atividade in Model.atividadeLogsPS.OrderByDescending(a => a.Timestamp).Take(5))
+                                {
+                                    <div class="d-flex">
+                                        <div class="activite-label">@atividade.Timestamp.ToString("dd/MM/yyyy HH:mm")</div>&nbsp;&nbsp;
+                                        <i class='bi bi-circle-fill activity-badge text-secondary align-self-start'></i>&nbsp;&nbsp;
+                                        <div class="activity-content">@atividade.acao</div>&nbsp;&nbsp;
+                                        <div class="activity-status">@atividade.usuario?.usuario</div>&nbsp;&nbsp;
+                                    </div>
+                                }
+                            }
+                            else
+                            {
+                                <p>Nenhuma atividade logada.</p>
+                            }
+                        </div>
+                    </div>
+                    <br />
+                </div>
+                <!-- Fim - Logs de Atividades -->
+
+               
