--- a/OffshoreTrack/Views/Rateio/New.cshtml
+++ b/OffshoreTrack/Views/Rateio/New.cshtml
@@ -27,7 +27,7 @@
         <div class="col">
             <div class="form-group">
                 <label for="inputText" class="col-sm col-form-label">Porcentagem 1:</label>
-                <input type="text" min="1" max="100" class="form-control" asp-for="valor1" />
+                <input type="text" min="1" max="100" class="form-control" asp-for="porcentagem1" />
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
         <div class="col">
             <div class="form-group">
                 <label for="inputText" class="col-sm col-form-label">Porcentagem 2:</label>
-                <input type="text" min="1" max="100" class="form-control" asp-for="valor2" />
+                <input type="text" min="1" max="100" class="form-control" asp-for="porcentagem2" />
             </div>
         </div>
     </div>
@@ -60,21 +60,21 @@
     <script>
         $(document).ready(function(){
             $('form').on('submit', function() {
-                $("input[name='valor1']").val(function(i, v) {
+                $("input[name='porcentagem1']").val(function(i, v) {
                     return v.replace('%','');
                 });
-                $("input[name='valor2']").val(function(i, v) {
+                $("input[name='porcentagem2']").val(function(i, v) {
                     return v.replace('%','');
                 });
             });
 
-            $("input[name='valor1']").on('input', function() {
+            $("input[name='porcentagem1']").on('input', function() {
                 $(this).val(function(i, v) {
                     return v.replace('%','') + '%';
                 });
             });
             
-            $("input[name='valor2']").on('input', function() {
+            $("input[name='porcentagem2']").on('input', function() {
                 $(this).val(function(i, v) {
                     return v.replace('%','') + '%';
                 });
