--- a/OffshoreTrack/wwwroot/css/site.css
+++ b/OffshoreTrack/wwwroot/css/site.css
@@ -21,3 +21,24 @@ body {
   margin-bottom: 60px;
 }
 
+/* Estilos para a versão de impressão */
+@media print {
+  .print-hide {
+    display: none !important;
+  }
+
+  .print-only-oc {
+    display: block;
+  }
+
+  html {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+
+  }
+}
