--- a/OffshoreTrack/Views/OrdemCompra/Read.cshtml
+++ b/OffshoreTrack/Views/OrdemCompra/Read.cshtml
@@ -21,13 +21,59 @@
     <div class="col">
         <div class="card">
             <div class="card-body">
+                    <!-- Cabeçalho para imprimir o OC -->
+                    <div class="print-only-oc">
+                        <h4>Ordem de compra</h4>
+                        <table class="table table-bordered border-dark">
+                            <tr>
+                                <td colspan="1">
+                                    @if(Model.empresa.logoEmpresa != null) 
+                                    {
+                                        var base64 = Convert.ToBase64String(Model.empresa.logoEmpresa);
+                                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
 
-                <!-- Incluir o Cabeçalho de Impressão -->
-                @if (Context.Request.Query["print"] == "true")
-                {
-                    @Html.Partial("PrintOC", Model.empresa)
-                }
-                <!-- Fim - Incluir o Cabeçalho de Impressão -->
+                                        <img src="@imgSrc" alt="Logo da Empresa" width="100px;" />
+                                    }
+
+                                </td>
+                                <td colspan="2">
+                                    <strong>@Model.empresa</strong>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <strong>Razão Social:</strong> @Model.empresa.razaoSocialEmpresa
+                                </td>
+                                <td colspan="2">
+                                    <strong>CNPJ:</strong> @Model.empresa.cnpjEmpresa
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <strong>Inscrição Estadual:</strong> @Model.empresa.inscricaoEstadualEmpresa
+                                </td>
+                                <td colspan="2">
+                                    <strong>Inscrição Municipal:</strong> @Model.empresa.inscricaoMunicipalEmpresa
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="4">
+                                    <strong>Endereço:</strong> @Model.empresa.enderecoEmpresa
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="4">
+                                    <strong>Telefone:</strong> @Model.empresa.telefoneEmpresa
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="4">
+                                    <strong>E-mail:</strong> @Model.empresa.emailEmpresa
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <!-- Fim - Cabeçalho para imprimir o OC -->
 
                     <div class="row">
                         <div class="col-sm-2">
@@ -41,7 +87,7 @@
                             <input type="text" class="form-control" id="oc" name="oc" asp-for="oc" readonly/>
                             <br />
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-sm-3 print-hide">
                             <div class="form-group">
                                 <label asp-for="prioridade" class="col-sm col-form-label">Prioridade:</label>
                                 <p class="form-control" readonly>@Model.prioridade</p>
@@ -63,7 +109,7 @@
                             <label for="inputText" class="col-sm col-form-label">Data prevista:</label>
                             <input type="date" class="form-control" id="data_prevista" name="data_prevista" asp-for="data_prevista" readonly/>
                         </div>
-                        <div class="col">
+                        <div class="col print-hide">
                             <label for="inputText" class="col-sm col-form-label">Data de Conclusão da OC:</label>
                             @if (Model.data_conclusao == null)
                             {
@@ -77,92 +123,101 @@
 
                     </div>
                     <hr>
-                    <h5>Itens</h5>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label for="inputText" class="col-sm col-form-label">Item 1:</label>
-                            <input type="text" class="form-control" id="item1" name="item1" asp-for="item1" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                            <input type="text" class="form-control" id="quantidade1" name="quantidade1" asp-for="quantidade1" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Valor:</label>
-                            <input type="text" class="form-control valor" id="valor1" name="valor1" asp-for="valor1" readonly/>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label for="inputText" class="col-sm col-form-label">Item 2:</label>
-                            <input type="text" class="form-control" id="item2" name="item2" asp-for="item2" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                            <input type="text" class="form-control" id="quantidade2" name="quantidade2" asp-for="quantidade2" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Valor:</label>
-                            <input type="text" class="form-control valor" id="valor2" name="valor2" asp-for="valor2" readonly/>
-                        </div>
-                    </div>
+                    <h5 class="print-hide">Itens</h5>
 
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label for="inputText" class="col-sm col-form-label">Item 3:</label>
-                            <input type="text" class="form-control" id="item3" name="item3" asp-for="item3" readonly/>
+                        @if (!string.IsNullOrEmpty(Model.item1)){
+                        <div class="row" >
+                            <div class="col-sm-6">
+                                <label for="inputText" class="col-sm col-form-label">Item 1:</label>
+                                <input type="text" class="form-control" id="item1" name="item1" asp-for="item1" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                                <input type="text" class="form-control" id="quantidade1" name="quantidade1" asp-for="quantidade1" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Valor:</label>
+                                <input type="text" class="form-control valor" id="valor1" name="valor1" asp-for="valor1" readonly/>
+                            </div>
                         </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                            <input type="text" class="form-control" id="quantidade3" name="quantidade3" asp-for="quantidade3" readonly/>
+                        }
+                        @if (!string.IsNullOrEmpty(Model.item2)){
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="inputText" class="col-sm col-form-label">Item 2:</label>
+                                <input type="text" class="form-control" id="item2" name="item2" asp-for="item2" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                                <input type="text" class="form-control" id="quantidade2" name="quantidade2" asp-for="quantidade2" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Valor:</label>
+                                <input type="text" class="form-control valor" id="valor2" name="valor2" asp-for="valor2" readonly/>
+                            </div>
                         </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Valor:</label>
-                            <input type="text" class="form-control valor" id="valor3" name="valor3" asp-for="valor3" readonly/>
+                        }
+                        @if (!string.IsNullOrEmpty(Model.item3)){
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="inputText" class="col-sm col-form-label">Item 3:</label>
+                                <input type="text" class="form-control" id="item3" name="item3" asp-for="item3" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                                <input type="text" class="form-control" id="quantidade3" name="quantidade3" asp-for="quantidade3" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Valor:</label>
+                                <input type="text" class="form-control valor" id="valor3" name="valor3" asp-for="valor3" readonly/>
+                            </div>
                         </div>
-                    </div>
+                        }
+                        @if (!string.IsNullOrEmpty(Model.item4)){
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="inputText" class="col-sm col-form-label">Item 4:</label>
+                                <input type="text" class="form-control" id="item4" name="item4" asp-for="item4" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                                <input type="text" class="form-control" id="quantidade4" name="quantidade4" asp-for="quantidade4" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Valor:</label>
+                                <input type="text" class="form-control valor" id="valor4" name="valor4" asp-for="valor4" readonly/>
+                            </div>
+                        </div>
+                        }
+                        @if (!string.IsNullOrEmpty(Model.item5)){
+                        <div class="row" >
+                            <div class="col-sm-6">
+                                <label for="inputText" class="col-sm col-form-label">Item 5:</label>
+                                <input type="text" class="form-control" id="item5" name="item5" asp-for="item5" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
+                                <input type="text" class="form-control" id="quantidade5" name="quantidade5" asp-for="quantidade5" readonly/>
+                            </div>
+                            <div class="col-sm-3">
+                                <label for="inputText" class="col-sm col-form-label">Valor:</label>
+                                <input type="text" class="form-control valor" id="valor5" name="valor5" asp-for="valor5" readonly/>
+                            </div>
+                        </div>
+                        }
+                    <br class="print-hide">
 
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label for="inputText" class="col-sm col-form-label">Item 4:</label>
-                            <input type="text" class="form-control" id="item4" name="item4" asp-for="item4" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                            <input type="text" class="form-control" id="quantidade4" name="quantidade4" asp-for="quantidade4" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Valor:</label>
-                            <input type="text" class="form-control valor" id="valor4" name="valor4" asp-for="valor4" readonly/>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <label for="inputText" class="col-sm col-form-label">Item 5:</label>
-                            <input type="text" class="form-control" id="item5" name="item5" asp-for="item5" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Quantidade:</label>
-                            <input type="text" class="form-control" id="quantidade5" name="quantidade5" asp-for="quantidade5" readonly/>
-                        </div>
-                        <div class="col-sm-3">
-                            <label for="inputText" class="col-sm col-form-label">Valor:</label>
-                            <input type="text" class="form-control valor" id="valor5" name="valor5" asp-for="valor5" readonly/>
-                        </div>
-                    </div>
-                    <br>
                     <div class="row">
                         <h5 class="text-end"><strong>Total:</strong> R$ @Model.TotalValor</h5>
                     </div>
                     <hr>
                     @if (Model.rateio != null)
                     {
-                        <h5>Rateio</h5>
-                        <label asp-for="id_rateio" class="col-sm col-form-label">Rateio:</label>
-                        <p class="form-control" readonly>@Html.DisplayFor(model => model.rateio.rateio)</p>
+                        <h5 class="print-hide">Rateio</h5>
+                        <label asp-for="id_rateio" class="col-sm col-form-label print-hide">Rateio:</label>
+                        <p class="form-control print-hide" readonly>@Html.DisplayFor(model => model.rateio.rateio)</p>
 
-                        <div class="row">
+                        <div class="row print-hide">
                             <div class="col-sm-2">Rateio 1:</div>
                             <div class="col-sm-5">
                                 <div class="form-group">
@@ -174,7 +229,7 @@
                             </div>
                         </div>
 
-                        <div class="row">   
+                        <div class="row print-hide">   
                             <div class="col-sm-2">Rateio 2:</div>
 
                             <div class="col-sm-5">
@@ -189,7 +244,7 @@
                     <hr>    
                     }
 
-                    <h5>Fornecedor</h5>
+                    <h5 class="print-hide">Fornecedor</h5>
                     <div class="row">
                         <div class="col">
                             <div class="form-group">
@@ -210,7 +265,8 @@
                             </div>
                         </div>
                     </div>
-                    <br>
+                    <br class="print-hide">
+
 
                     <div class="col">
                         <div class="form-group">
@@ -220,12 +276,13 @@
                     </div>
 
 
-                    <div class="col">
+                    <div class="col print-hide">
                         <label asp-for="anexo" class="col-form-label">Anexos:</label>
                         @if(Model.anexo != null && Model.anexo.Length > 0)
                         {
                             <a class="btn btn-secondary" href="@Url.Action("DownloadAnexo", "OrdemCompra", new { id = Model.id_oc })">Baixar Anexo</a>
-                            <br>
+                            <br class="print-hide">
+
                         }
                         else
                         {
@@ -234,8 +291,7 @@
                     </div>
                 <br /> 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button class="btn btn-secondary">Download da Ordem de Compra</button>
-                    <button class="btn btn-outline-secondary" onclick=" window.print();">Imprimir Ordem de Compra</button>
+                    <button class="btn btn-primary print-hide" onclick=" window.print();">Imprimir Ordem de Compra</button>
                 </div>
             </div>
         </div>
