--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
                 <a class="btn btn-outline-light" role="button" asp-area="" asp-controller="Empresa" asp-action="Read">Dados da Empresa</a>&nbsp;&nbsp;&nbsp;
                 <li class="nav-item dropdown pe-3">
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <p class="" style="margin: 1px;">Usuário:</p>
+                    <p class="" style="margin: 1px;">Usuário logado: @User.FindFirst(ClaimTypes.Name).Value </p>
+
                         <span class="d-none d-md-block dropdown-toggle ps-2"></span>
                     </a>
 
@@ -35,11 +36,13 @@
                             <h6></h6>
                         </li>
 
-                        <li class="dropdown-item"> <b>Permissão:</b>permisao</li>
+                        <li class="dropdown-item">
+                            <p class="" style="margin: 1px;">Permissão: @User.FindFirst(ClaimTypes.Role).Value </p>
+                        </li>
                         <li>
-    <a asp-controller="Conta" asp-action="Logout" class="dropdown-item rounded-2">
-    <i class="bi bi-box-arrow-right"></i>Logout
-    </a>
+                            <a asp-controller="Conta" asp-action="Logout" class="dropdown-item rounded-2">
+                            <i class="bi bi-box-arrow-right"></i>Logout
+                            </a>
                         </li>
                     </ul>
 
