--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <a class="btn btn-outline-light" role="button" asp-area="" asp-controller="Empresa" asp-action="Read">Dados da Empresa</a>&nbsp;&nbsp;&nbsp;
                 <li class="nav-item dropdown pe-3">
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <p class="" style="margin: 1px;">Usuário logado: @User.FindFirst(ClaimTypes.Name).Value </p>
+                    <p class="nav-item" style="margin: 1px;">Usuário logado: @User.FindFirst(ClaimTypes.Name).Value </p>
 
                         <span class="d-none d-md-block dropdown-toggle ps-2"></span>
                     </a>
