--- a/OffshoreTrack/Views/Shared/_LoginLayout.cshtml
+++ b/OffshoreTrack/Views/Shared/_LoginLayout.cshtml
@@ -3,31 +3,30 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
-
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <title>@ViewData["Login"]</title>
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/OffshoreTrack.styles.css" asp-append-version="true" media="print"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
-<body>
-
-    <main id="main" class="main">
-        <div class="container-fluid px-4">
-            @RenderBody()
+<body style="background: #003554 !important;">
+    <main>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+                    <div class="d-flex justify-content-center py-4">
+                        <img class="mb-4" src="~/images/offshorelogo.png" alt="" width="200" height="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center">
+            <div class="card col-sm-3">
+                <div class="card-body">
+                    @RenderBody()
+                </div>
+            </div>
         </div>
     </main>
-
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
-    <script src="~/lib/jquery.mask.js"></script>
-    <script src="~/lib/jquery-mask-plugin/src/jquery.mask.js" type="text/javascript" asp-append-version="true"></script>
-
-    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
